# odysseus-chartreuse

./: .gitignore  README.md
mobile/: CMakeLists.txt  prj.conf
mobile/boards/: disco_l475_iot1.overlay
nodes/: README.md
nodes/base_node/: README.md  prj.conf  sysbuild.conf
nodes/base_node/boards/: nrf52840dk_nrf52840.overlay
nodes/base_node/include/: bt_interface.h  filesystem.h  mqtt.h  sensordata.h  servo.h
nodes/base_node/src/: ble_observer_ext_ad.c  bt_interface.c  data_recv.c  filesystem.c  main.c  mqtt.c  sensordata.c  servo.c  shell_cmds.c
nodes/base_node/sysbuild/: mcuboot.conf
nodes/basenode_mobile_dev/: CMakeLists.txt
nodes/basenode_mobile_dev/src/: ble_observer_ext_ad.c  main.c
nodes/mobile/: CMakeLists.txt  prj.conf
nodes/mobile/src/: ble_observer_ext_ad.c  ble_observer_normal_ad .c  ble_observer_normal_ad.c  ble_observers.c  ble_sensordata_ext_ad.c  main.c  shared_vars.h
nodes/mobile/sysbuild/: mcuboot.conf
nodes/sensor/: CMakeLists.txt  README.md  prj.conf
nodes/sensor/boards/: nrf52840dk_nrf52840.overlay
nodes/sensor/src/: bt_handler.c  bt_handler.h  main.c  rb_sync.c  rb_sync.h  sensors.c  sensors.h  sys_time.c  sys_time.h  utils.h
nodes/sensornode_mobile_dev/: CMakeLists.txt  prj.conf
nodes/sensornode_mobile_dev/src/: OLD_sensornode_observer.c  main.c
nodes/wifi_node/: CMakeLists.txt  prj.conf
nodes/wifi_node/boards/: esp32c3_devkitm.conf
nodes/wifi_node/include/: mqtt.h  wifi.h
pages/: Criteria_Address.md  deliverables.md  description.md  interface_standards.md  system_integration.md  wireless_comms.md
(+34 files in other folders)
